# SQL_table_builder

./: pyproject.toml
main/: settings.py  settings.py.orig  urls.py
table_builder/: admin.py  apps.py  mixins.py  models.py  views.py
table_builder/migrations/: 0001_initial.py
table_builder/src/entity/: abstract_models.py  constants.py  db_broker.py  schema.py
table_builder/src/generics/: form_mixins.py  model_fields.py
table_builder/src/interface/: form_builders.py  schema_builder.py
table_builder/src/services/: query_constructor.py  schema_serializers.py  sql_formset.py  to_schema_converters.py
